<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kido TV</string>
    <string name="image_splash_description">splash</string>
    <string name="image_start_button">image_start_button</string>
    <string name="start_menu_bg_image">start_menu_bg_image</string>
    <string name="google_button">google_button</string>
    <string name="rate_button">rate_button</string>
    <string name="facebook_button">facebook_button</string>
    <string name="image_settings_button">image_settings_button</string>
    <string name="image_lock">image_lock</string>
    <string name="image_fx">image_fx</string>
    <string name="image_volume">image_volume</string>
    <string name="back_button_img">back_button_image</string>
    <string name="image_icon_left">image_icon_left</string>
    <string name="image_icon_right">image_icon_right</string>
    <string name="video_thumb_image">video_thumb_image</string>
    <string name="error_player">Youtube player error</string>
    <string name="time">00:00</string>
    <string name="title_activity_favorite_play_list_scene">FavoritePlayListScene</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="shadow">shadow</string>
    <string name="search_icon">search_icon</string>
    <string name="favorites_icon">favorites_icon</string>
    <string name="progrestextview">0.00%</string>
    <string name="price">price</string>
    <string name="monkey">monkey</string>
    <string name="search">Tap to search playlist</string>
    <string name="tip_checkBox">Don\'t show again</string>
    <string name="app_id">1417251308528260</string>

</resources>
