<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainlayout">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <TextView
        android:layout_centerInParent="true"
        android:id="@+id/progresTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progrestextview"/>

    <mp.agencja.apsik.kidotv.main.ViewPagerParallax
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"/>

    <ImageButton
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_icon"
        android:contentDescription="@string/back_button_img"/>

    <ImageButton
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:id="@+id/displayAllPlayLists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/list_icon"
        android:contentDescription="@string/back_button_img"/>

    <ImageButton
        android:id="@+id/btnLeft"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="5dp"
        android:paddingTop="25dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/left_arrow"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_icon_left"/>

    <ImageButton
        android:id="@+id/btnRight"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:paddingTop="25dp"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right_arrow"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_icon_right"/>

    <include layout="@layout/right_menu"/>
</RelativeLayout>